[tool.poetry]
name = "llm-finetune"
version = "0.1.0"
description = ""
authors = ["Harsh Prajapati <prajapatihs1304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
transformers = "^4.53.2"
sentencepiece = "^0.2.0"
torch = "^2.7.1"
mlflow = "^3.1.1"
pydantic = "^2.11.7"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
peft = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
